--- a/classification/classification.vcxproj
+++ b/classification/classification.vcxproj
@@ -69,10 +69,7 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>H:\opencv\build\include;H:\opencv\build\include\opencv2;H:\opencv\build\include\opencv;$(IncludePath)</IncludePath>
-    <LibraryPath>H:\opencv\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
-  </PropertyGroup>
+  <PropertyGroup />
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -88,10 +85,6 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
-    <Link>
-      <AdditionalLibraryDirectories>H:\opencv\build\x64\vc14\lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>opencv_world320d.lib;%(AdditionalDependencies)</AdditionalDependencies>
-    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -122,17 +115,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\buffer_2d.h" />
-    <ClInclude Include="..\CannyLine.h" />
-    <ClInclude Include="..\MetaLine.h" />
-    <ClInclude Include="..\QuickSort.h" />
-    <ClInclude Include="..\types.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="..\buffer_2d.cpp" />
-    <ClCompile Include="..\CannyLine.cpp" />
-    <ClCompile Include="..\main.cpp" />
-    <ClCompile Include="..\MetaLine.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
